--- a/aula07/frontend/index.html
+++ b/aula07/frontend/index.html
@@ -18,18 +18,21 @@
         <hr>
 
         <section class="card card-body">
-            <form onsubmit="cadastrar()">
-                <label for="nome">Nome</label>
-                <input id="nome" class="form-control mb-3">
+            <table class="table table-striped table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th>#ID</th>
+                        <th>Nome</th>
+                        <th>Carga Horária</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody id="table_disciplinas">
 
-                
-                <label for="carga_horaria">Carga Horária</label>
-                <input id="carga_horaria" class="form-control mb-3">
-
-                <button class="btn btn-primary">Pronto</button>
-            </form>
+                </tbody>
+            </table>
         </section>
 
-        <script src="js/adicionar.js"></script>
+        <script src="js/eventos.js"></script>
     </body>
 </html>
